fixed the select bar shifted issues

--- a/templates/css/grid.css
+++ b/templates/css/grid.css
@@ -24,7 +24,6 @@
 [class^='col-'] {
 	float: left;
 	padding: 0; 
-	text-align: center; /* center the content in this block */
 }
 
 
